# agents-matrix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
agent/: loop.py
agents/cast/: Dockerfile  agent_config.py  docker-compose.yml  main.py  mcp_tools.py  pyproject.toml
agents/cast/scripts/: register.sh
agents/drawio/: agent_config.py
agents/solana/: agent_config.py
agents/sui/: Dockerfile  agent_config.py
agents/sui/docker/: install.sh
config/: chains.toml  pricing.toml  settings.py
docs/: deployment.md
executor/: calibre_executor.py  cast_executor.py  file_handler.py
framework/: pyproject.toml
framework/src/agents_core/: __init__.py  app.py  executor.py  loop.py  payment.py  registration.py  settings.py
mcp_server/: __main__.py  calibre_tools.py  cast_tools.py
register/: register_agent.py
scripts/: deploy.sh  register.sh  run.sh
server/: agent_card.py  app.py  payment.py
